# visual-memory-rust

./: .gitignore  Cargo.toml  README.md  build.rs
.cargo/: config.toml
arduino-nano/: Cargo.toml  build.rs
arduino-nano-minimized/: Cargo.toml  avr-atmega328p.json  build.rs  initialize_memory.S  interrupt_vector.S  linker-script
arduino-nano-minimized/.cargo/: config.toml
arduino-nano-minimized/font_to_array/: Cargo.toml
arduino-nano-minimized/src/: error.rs  font_progmem.rs  game.rs  main.rs  print.rs
arduino-nano/avr-specs/: avr-atmega328p.json
arduino-nano/src/: error.rs  main.rs  main_rp2040.rs
desktop/: Cargo.toml  build.rs
desktop/src/: debouncing.rs  error.rs  main.rs  main_arduino.rs
program/: Cargo.toml
program/src/: game.rs  lib.rs
raspberry-pi-pico/: Cargo.toml  build.rs
raspberry-pi-pico/.cargo/: config.toml
raspberry-pi-pico/src/: abstract_device.rs  main.rs
src/: abstract_device.rs  debouncing.rs  error.rs  game.rs  main.rs  main_desktop.rs  main_rp2040.rs
