[workspace]
resolver = "2"
members = [
    "raspberry-pi-pico",
    "arduino-nano",
    "desktop",
    "program",

    "arduino-nano-minimized",
    "arduino-nano-minimized/font_to_array",
]
default-members = [
    "raspberry-pi-pico"
]

#
## RPI and Desktop
## cargo build/run
#[profile.dev]
#codegen-units = 1
#debug = 2
#debug-assertions = true
#incremental = false
#opt-level = 3
#overflow-checks = true
#
## cargo build/run --release
#[profile.release]
#codegen-units = 1
#debug = 2
#debug-assertions = false
#incremental = false
#lto = 'fat'
#opt-level = 3
#overflow-checks = false
#
## AVR
#[profile.dev.package."arduino-nano"]
#panic = "abort"
#lto = true
#opt-level = "s"
#
#[profile.release.package."arduino-nano"]
#panic = "abort"
#codegen-units = 1
##debug = true
#lto = true
#strip = true
#opt-level = "z"
#

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
