[package]
edition = "2021"
name = "arduino-nano-minimized"
version = "0.1.0"
license = "MIT OR Apache-2.0"

# All platforms
[dependencies]
embedded-graphics = "0.8.1"
fixed-slice-vec = "0.10.0"
fastrand = { version = "2.3.0", default-features = false }
#bmi160 = "1.1.0"

embedded-hal = { version = "1.0.0" }
ssd1306 = "0.9.0"
display-interface = { version = "0.5.0", features = ["defmt-03"] }

# Arduino nano
panic-halt = "0.2.0"
arduino-hal = { git = "https://github.com/rahix/avr-hal", rev = "3c089795cadbbc7fa83f45958128689fee7ba1e4", features = ["arduino-nano"] }
avr-progmem = "0.4.0"
avr-device = { version = "0.7.0" }
ufmt = "0.2.0"
format_no_std = "1.2.0"

[target.'cfg(target_arch = "avr")'.build-dependencies]
proc-macro2 = "=1.0.79"

[[bin]]
name = "arduino-nano-minimized"

#[[bin]]
#name = "font_to_array"
#path = "bin/font_to_array.rs"
default-run ="arduino-nano-minimized"
