[package]
edition = "2021"
name = "desktop"
version = "0.1.0"
license = "MIT OR Apache-2.0"

# All platforms
[dependencies]
embedded-graphics = "0.8.1"
fixed-slice-vec = "0.10.0"
format_no_std = "1.2.0"
fastrand = { version = "2.3.0", default-features = false }
#bmi160 = "1.1.0"

# Desktop
[target.'cfg(target_arch = "x86_64")'.dependencies]
embedded-graphics-simulator = "0.7.0"
rand = "0.9.0"
program = { path = "../program" }
