[package]
edition = "2021"
name = "raspberry-pi-pico"
version = "0.1.0"
license = "MIT OR Apache-2.0"

# All platforms
[dependencies]
embedded-hal = { version = "1.0.0" }
portable-atomic = { version = "1.11.0", features = ["critical-section"] }
ssd1306 = "0.9.0"
display-interface = { version = "0.5.0", features = ["defmt-03"] }
program = { path = "../program" }

cortex-m = "0.7"
cortex-m-rt = "0.7"
panic-probe = { version = "0.3", features = ["print-defmt"] }
defmt-rtt = "0.4"
rp-pico = "0.9"
rp2040-hal = { version = "0.10", features = ["rt", "critical-section-impl", "defmt"] }
rp2040-boot2 = "0.3"
defmt = "0.3"
embedded-hal-bus = "0.2.0"

# Centrally,
# https://github.com/rp-rs/rp2040-project-template
# Change .cargo/config.toml to use runner = "elf2uf2-rs -d"
# Additionally:
# https://github.com/rp-rs/rp-hal#gettting_started

# Haven't touched yet:
# https://reltech.substack.com/p/getting-started-with-rust-on-a-raspberry